fonts added. array size in schedule error fixed

--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -1,34 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".activity.MainActivity"
+    >
 
-    <TextView
-        android:id="@+id/tvTrainDetails"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="22sp"
-        android:padding="5dp"
-        android:gravity="center"
-        android:textColor="@color/colorPrimary"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="5dp"
-        />
+    <!--<include-->
+        <!--layout="@layout/toolbar" />-->
 
-    <TextView
-        android:id="@+id/tvSourceDest"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textColor="@color/colorPrimary"
-        android:layout_marginBottom="10dp"
-        android:textSize="15sp"
-        />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvSchedule"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="7dp" />
+        android:layout_below="@+id/toolbar"
+        >
 
-</LinearLayout>
+        <in.arshad.offlinetimetable.util.widgets.MontRegularTextView
+            android:id="@+id/tvTrainDetails"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="22sp"
+            android:padding="5dp"
+            android:gravity="center"
+            android:textColor="@color/colorPrimary"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
+            />
+
+        <in.arshad.offlinetimetable.util.widgets.MontLightTextView
+            android:id="@+id/tvSourceDest"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="@color/colorPrimary"
+            android:layout_marginBottom="10dp"
+            android:textSize="15sp"
+            />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvSchedule"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="7dp" />
+
+    </LinearLayout>
+
+</RelativeLayout>
