--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activity.MainActivity"
-    android:gravity="center"
     >
 
-    <EditText
+    <!--<include-->
+        <!--layout="@layout/toolbar" />-->
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_below="@+id/toolbar"
+        android:gravity="center"
+        >
+
+    <in.arshad.offlinetimetable.util.widgets.MontEditText
         android:id="@+id/etSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,7 +31,7 @@
         android:singleLine="true"
         />
 
-    <Button
+    <in.arshad.offlinetimetable.util.widgets.MontRegularTextView
         android:id="@+id/btSubmit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,6 +43,11 @@
         android:layout_marginRight="40dp"
         android:background="@drawable/bg_border_primary_selector"
         android:textColor="@color/colorPrimary"
+        android:padding="15dp"
+        android:gravity="center_horizontal"
+        android:textAllCaps="true"
         />
+
+    </RelativeLayout>
 
 </RelativeLayout>
