--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.MainActivity"
-    >
-
-    <!--<include-->
-        <!--layout="@layout/toolbar" />-->
+    android:layout_height="match_parent" >
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar"
+        android:layout_marginBottom="55dp"
         >
 
         <in.arshad.offlinetimetable.util.widgets.MontRegularTextView
@@ -42,8 +37,12 @@
             android:id="@+id/rvSchedule"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="7dp" />
+            android:padding="7dp"
+            />
 
     </LinearLayout>
+
+    <include
+        layout="@layout/global_ad_unit" />
 
 </RelativeLayout>
